--- a/board_app/templates/home_page.html
+++ b/board_app/templates/home_page.html
@@ -5,6 +5,16 @@
 {% endblock %}
 
 {% block content %}
+    <script>
+        var $dipper = $('.dipper')
+
+        $dipper.waypoint(function(){
+            console.log(';qkwejrqpu');
+        });
+    </script>
+    <p class="dipper">
+        TEST
+    </p>
     <table class="table">
         <thead class="thead-inverse">
         <tr>
@@ -48,7 +58,7 @@
                     </div>
                 {% endfor %}
             </div>
-            <div class="loading" style="display: none;">
+            <div class="loading waypoint" style="display: none;">
                 <tr>
                     <td>
                         Loading...
@@ -67,15 +77,27 @@
     {% if boards.has_next %}
     <a class="infinite-more-link" href="?page={{ boards.next_page_number }}">More</a>
     {% endif %}
-    <script>
-            var infinite = new Waypoint.Infinite({
-              element: $('.infinite-container')[0],
-              onBeforePageLoad: function () {
-                $('.loading').show();
-              },
-              onAfterPageLoad: function ($items) {
-                $('.loading').hide();
-              }
-            });
-    </script>
+
+{#    <script>#}
+{#            var infinite = new Waypoint.Infinite({#}
+{#              element: $('.loading')[0],#}
+{#              onBeforePageLoad: function () {#}
+{#                $('.loading').show();#}
+{#                console.log('Show');#}
+{#              },#}
+{#              onAfterPageLoad: function ($items) {#}
+{#                $('.loading').hide();#}
+{#                console.log('Hide');#}
+{#              }#}
+{#            });#}
+{#            infinite.onAfterPageLoad()#}
+{#    </script>#}
+{#    <script>#}
+{#        var waypoint = new Waypoint.Infinite({#}
+{#            element: document.getElementById('waypoint'),#}
+{#            handler: function (direction) {#}
+{#                console.log('Scrolled to waypoint!')#}
+{#            }#}
+{#        })#}
+{#    </script>#}
 {% endblock %}
