--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,9 @@
     <title>{% block title %}Django Boards{% endblock %}</title>
     <link href="https://fonts.googleapis.com/css?family=Peralta" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-    <link rel="stylesheet" href="{% static 'css/app.css' %}">
+    <script src="{% static 'js/jquery-3.2.1.min.js' %}"></script>
+    <script src="{% static 'js/jquery.waypoints.min.js' %}"></script>
+    <script src="{% static 'js/infinite.min.js' %}"></script>
     {% block stylesheet %}{% endblock %}
 </head>
 <body>
@@ -29,7 +31,7 @@
                             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userMenu">
                                 <a class="dropdown-item" href="{% url 'my_account' %}">My account</a>
                                 <a class="dropdown-item" href="#">Change password</a>
-{#                                {% url 'password_change' %}#}
+                                {#                                {% url 'password_change' %}#}
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="{% url 'logout' %}">Log out</a>
                             </div>
