--- a/templates/includes/partial_update.html
+++ b/templates/includes/partial_update.html
@@ -1,6 +1,6 @@
 {% load widget_tweaks %}
 
-<form method="POST" action="{% url 'update_topic'  board_pk topic_pk %}" class="js-topic-create-form">
+<form method="POST" action="{% url 'update_topic'  board_pk topic_pk %}" class="js-topic-update-form">
     {% csrf_token %}
     <div class="modal-header">
         <h4 class="modal-title">Update</h4>
