--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,6 @@
-{% load static %}<!DOCTYPE html>
+{% load static %}
+{% load flatpages %}
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8">
@@ -67,6 +69,17 @@
         {% block content %}
         {% endblock %}
     </div>
+    <footer class="bg-dark fixed-bottom">
+    {% get_flatpages as flatpages %}
+        <div class="container">
+        <ul class="list-inline">
+            {% for page in flatpages %}
+                <li class="list-inline-item"><a class="nav-link m-0 text-center text-white" href='{{ page.url }}'>{{ page.title }}</a></li>
+            {% endfor %}
+        </ul>
+        </div>
+    </footer>
+
 {% endblock body %}
 
 {% block javascript %}{% endblock %}
