--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,7 @@
     <title>{% block title %}Django Boards{% endblock %}</title>
     <link href="https://fonts.googleapis.com/css?family=Peralta" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+{#    <link rel="stylesheet" href="{% static 'css/style.css' %}">#}
     <script src="{% static 'js/jquery-3.2.1.min.js' %}"></script>
     <script src="{% static 'js/popper.min.js' %}"></script>
     <script src="{% static 'js/bootstrap.js' %}"></script>
@@ -70,13 +71,14 @@
         {% endblock %}
     </div>
     <footer class="bg-dark fixed-bottom">
-    {% get_flatpages as flatpages %}
+        {% get_flatpages as flatpages %}
         <div class="container">
-        <ul class="list-inline">
-            {% for page in flatpages %}
-                <li class="list-inline-item"><a class="nav-link m-0 text-center text-white" href='{{ page.url }}'>{{ page.title }}</a></li>
-            {% endfor %}
-        </ul>
+            <ul class="list-inline">
+                {% for page in flatpages %}
+                    <li class="list-inline-item"><a class="nav-link m-0 text-center text-white"
+                                                    href='{{ page.url }}'>{{ page.title }}</a></li>
+                {% endfor %}
+            </ul>
         </div>
     </footer>
 
