--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -3,31 +3,33 @@
 {% block title %}Log in to Django Boards{% endblock %}
 
 {% block content %}
-    <div class="row justify-content-center">
-        <div class="col-lg-4 col-md-6 col-sm-8">
-            <div class="card">
-                <div class="card-body">
-                    <h3 class="card-title">Log in</h3>
-                    <form method="post" novalidate>
-                        {% csrf_token %}
-                        <input type="hidden" name="next" value="{{ next }}">
-                        {% include 'includes/form.html' %}
-                        <button type="submit" class="btn btn-primary btn-block">Log in</button>
-                    </form>
-                </div>
-                <div class="card-footer text-muted text-center">
-                    <a href="{% url 'social:begin' 'github' %}">Login with GitHub</a><br>
-                    <a href="{% url 'social:begin' 'facebook' %}">Login with Facebook</a><br>
-                </div>
-                <div class="card-footer text-muted text-center">
-                    New to Django Boards? <a href="{% url 'signup' %}">Sign up</a>
-                </div>
+<div class="row justify-content-center">
+    <div class="col-lg-4 col-md-6 col-sm-8">
+        <div class="card">
+            <div class="card-body">
+                <h3 class="card-title">Log in</h3>
+                <form method="post" novalidate>
+                    {% csrf_token %}
+                    <input type="hidden" name="next" value="{{ next }}">
+                    {% include 'includes/form.html' %}
+                    <script src='https://www.google.com/recaptcha/api.js'></script>
+                    <div class="g-recaptcha" data-sitekey="6Lc4krIUAAAAABt7nGc68nonTFg0EZ376gbuh4c4"></div>
+                    <button type="submit" class="btn btn-primary btn-block">Log in</button>
+                </form>
             </div>
-            <div class="text-center py-2">
-                <small>
-                    <a href="{% url 'password_reset' %}" class="text-muted">Forgot your password?</a>
-                </small>
+            <div class="card-footer text-muted text-center">
+                <a href="{% url 'social:begin' 'github' %}">Login with GitHub</a><br>
+                <a href="{% url 'social:begin' 'facebook' %}">Login with Facebook</a><br>
+            </div>
+            <div class="card-footer text-muted text-center">
+                New to Django Boards? <a href="{% url 'signup' %}">Sign up</a>
             </div>
         </div>
+        <div class="text-center py-2">
+            <small>
+                <a href="{% url 'password_reset' %}" class="text-muted">Forgot your password?</a>
+            </small>
+        </div>
     </div>
+</div>
 {% endblock %}
