--- a/boards/templates/topic_posts.html
+++ b/boards/templates/topic_posts.html
@@ -25,8 +25,8 @@
     </div>
     <div class="col-3">
         <div class="mb-4">
-            <a href=" {% url 'export_topics_csv' topic.board.pk topic.pk %}" class="btn btn-primary" role="button">
-                Export to ###</a>
+            <a href=" {% url 'export_topics_pdf' topic.board.pk topic.pk %}" class="btn btn-primary" role="button">
+                Export to PDF</a>
         </div>
     </div>
 </div>
