--- a/boards/templates/new_topic.html
+++ b/boards/templates/new_topic.html
@@ -5,15 +5,16 @@
 {% block title %}Start a New Topic{% endblock %}
 
 {% block breadcrumb %}
-    <li class="breadcrumb-item"><a href="{% url 'home' %}">Boards</a></li>
-    <li class="breadcrumb-item"><a href="{% url 'board_topics' board.pk %}">{{ board.name }}</a></li>
-    <li class="breadcrumb-item active">New topic</li>
+<li class="breadcrumb-item"><a href="{% url 'home' %}">Boards</a></li>
+<li class="breadcrumb-item"><a href="{% url 'board_topics' board.pk %}">{{ board.name }}</a></li>
+<li class="breadcrumb-item active">New topic</li>
 {% endblock %}
 
 {% block content %}
-    <form method="post" novalidate>
-        {% csrf_token %}
-        {% include 'includes/form.html' %}
-        <button type="submit" class="btn btn-success">Post</button>
-    </form>
+<form method="post" enctype="multipart/form-data" novalidate>
+    {% csrf_token %}
+    {% include 'includes/form.html' %}
+    <!-- {{ form.as_p }} -->
+    <button type="submit" class="btn btn-success">Post</button>
+</form>
 {% endblock %}
