--- a/templates/base.html
+++ b/templates/base.html
@@ -2,61 +2,64 @@
 {% load flatpages %}
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8">
     <title>{% block title %}Django Boards{% endblock %}</title>
     <link href="https://fonts.googleapis.com/css?family=Peralta" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-{#    <link rel="stylesheet" href="{% static 'css/style.css' %}">#}
+    {#    <link rel="stylesheet" href="{% static 'css/style.css' %}">#}
     <script src="{% static 'js/jquery-3.2.1.min.js' %}"></script>
     <script src="{% static 'js/popper.min.js' %}"></script>
     <script src="{% static 'js/bootstrap.js' %}"></script>
+    <script src="{% static 'js/cropper.js' %}"></script>
 
     {#    <script src="{% static 'js/jquery.waypoints.js' %}"></script>#}
     {#    <script src="{% static 'js/infinite.min.js' %}"></script>#}
     {#    <script src="{% static 'js/waypoints.js' %}"></script>#}
     {% block stylesheet %}{% endblock %}
 </head>
+
 <body>
-{% block body %}
+    {% block body %}
 
     {% if messages %}
-        <ul class="messages">
-            {% for message in messages %}
-                <li class="{{ message.tags }}">{{ message }}</li>
-            {% endfor %}
-        </ul>
+    <ul class="messages">
+        {% for message in messages %}
+        <li class="{{ message.tags }}">{{ message }}</li>
+        {% endfor %}
+    </ul>
     {% endif %}
 
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
         <div class="container">
             <a class="navbar-brand" href="{% url 'home' %}">Django Boards</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainMenu"
-                    aria-controls="mainMenu" aria-expanded="false" aria-label="Toggle navigation">
+                aria-controls="mainMenu" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="mainMenu">
                 {% if user.is_authenticated %}
-                    <ul class="navbar-nav ml-auto">
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="userMenu" data-toggle="dropdown"
-                               aria-haspopup="true" aria-expanded="false">
-                                {{ user.username }}
-                            </a>
-                            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userMenu">
-                                <a class="dropdown-item" href="{% url 'my_account' %}">My account</a>
-                                <a class="dropdown-item" href="#">Change password</a>
-                                {#                                {% url 'password_change' %}#}
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="{% url 'logout' %}">Log out</a>
-                            </div>
-                        </li>
-                    </ul>
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="userMenu" data-toggle="dropdown"
+                            aria-haspopup="true" aria-expanded="false">
+                            {{ user.username }}
+                        </a>
+                        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userMenu">
+                            <a class="dropdown-item" href="{% url 'my_account' %}">My account</a>
+                            <a class="dropdown-item" href="#">Change password</a>
+                            {#                                {% url 'password_change' %}#}
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="{% url 'logout' %}">Log out</a>
+                        </div>
+                    </li>
+                </ul>
                 {% else %}
-                    <form class="form-inline ml-auto">
-                        <a href="{% url 'login' %}" class="btn btn-outline-secondary">Log in</a>
-                        <a href="{% url 'signup' %}" class="btn btn-primary ml-2">Sign up</a>
-                    </form>
+                <form class="form-inline ml-auto">
+                    <a href="{% url 'login' %}" class="btn btn-outline-secondary">Log in</a>
+                    <a href="{% url 'signup' %}" class="btn btn-primary ml-2">Sign up</a>
+                </form>
                 {% endif %}
             </div>
         </div>
@@ -75,15 +78,16 @@
         <div class="container">
             <ul class="list-inline">
                 {% for page in flatpages %}
-                    <li class="list-inline-item"><a class="nav-link m-0 text-center text-white"
-                                                    href='{{ page.url }}'>{{ page.title }}</a></li>
+                <li class="list-inline-item"><a class="nav-link m-0 text-center text-white"
+                        href='{{ page.url }}'>{{ page.title }}</a></li>
                 {% endfor %}
             </ul>
         </div>
     </footer>
 
-{% endblock body %}
+    {% endblock body %}
 
-{% block javascript %}{% endblock %}
+    {% block javascript %}{% endblock %}
 </body>
+
 </html>
